# pulse

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  PROVIDERS.md
src/: app.rs  cli.rs  config.rs  data.rs  main.rs  models.rs  ui.rs
src/providers/: base.rs  mod.rs  provider.rs  proxmox.rs
