[package]
name = "pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.53", features = ["derive"]}
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = {version = "0.12.24", features = ["json", "rustls-tls", "blocking"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
toml = "0.9.8"
